test/expected/typedef_iw3.out
typedef int Int : 3
        ^
9: error: "typedef" can not have bit-field widths
